<resources>
    <string name="app_name">NewsChannel</string>

    <string name="news_image_descriprion_text">Картинка</string>

    <string name="network_connection_lost_text">Ошибка загрузки! обновите страницу</string>
    <string name="empty_list_text">Список пуст</string>
    <string name="dialog_cancel_button_text">Отмена</string>
    <string name="load_is_successful_text">загрузка завершена"</string>
    <string name="reload_text">Обновить</string>
    <string name="cleare_cache_text">Очистить кэш</string>
    <string name="sort_by_date_text">Сортировать</string>

    <string name="filter_text">Фильтр</string>
    <string name="sort_date_asc_text">По дате (По возрастанию)</string>
    <string name="sort_date_desc_text">По дате (По убыванию)</string>
    <string name="sort_abs_asc_text">По алфавиту (По возрастанию)</string>
    <string name="sort_abs_desc_text">По алфавиту (По убыванию)</string>

    <string name="dialog_title">Сортировка списка</string>
    <string name="dialog_filter_text">Выберите источник загрузки</string>
    <string name="dialog_filter_proger_text">Proger</string>
    <string name="dialog_filter_hbr_text">Habr</string>
    <string name="dialog_filter_cleare_cache_text">Очистить кэш перед фильтрацией</string>
    <string name="feed_details_search_view">Search</string>
    <string name="search_text">Поиск по заголовку…</string>
    <string name="add_to_favorites_text">Добавить в избранное</string>
    <string name="back_text">Назад</string>
    <string name="share_text">Поделиться</string>
    <string name="watch_fav_text">Отобразить избранное</string>
    <string name="save_dialog_title">Сохранение файла</string>
    <string name="downloading_file">Загрузка файла</string>
    <string name="downloading_file_complete">Загрузка завершена</string>
    <string name="file_save_at">Файл сохранен в</string>


</resources>
